Followup to bug#49907: ALTER TABLE ... TRUNCATE PARTITION

The original bug fix added new SQL command objects based on the
class Sql_statement. However, later the class was renamed to Sql_cmd.
This fix aligns the new class names with the new name standard
introduced when renaming the class.